gcp-core/private.vpc/vpc.tf
resource "google_compute_network" "vpc" {
    name          =  "${var.project}-vpc"
    # name          =  "${format("%s","${var.company}-${var.env}-vpc")}"
  auto_create_subnetworks = "false"
  routing_mode            = "REGIONAL"
}

resource "google_compute_firewall" "allow-internal" {
  name    = "${var.project}-fw-allow-internal"
  network = "${google_compute_network.vpc.name}"
  allow {
    protocol = "icmp"
  }
  allow {
    protocol = "tcp"
    ports    = ["0-65535"]
  }
  allow {
    protocol = "udp"
    ports    = ["0-65535"]
  }
  source_ranges = [
    "${var.private_subnet1}",
    "${var.private_subnet2}",
    "${var.public_subnet1}",
    "${var.public_subnet2}"
  ]
}
resource "google_compute_firewall" "allow-http" {
  name    = "${var.project}-fw-allow-http"
  network = "${google_compute_network.vpc.name}"
allow {
    protocol = "tcp"
    ports    = ["80"]
  }
  target_tags = ["http"]
  source_tags = ["http"]
}

resource "google_compute_firewall" "allow-bastion" {
  name    = "${var.project}-fw-allow-bastion"
  network = "${google_compute_network.vpc.name}"
  allow {
    protocol = "tcp"
    ports    = ["22"]
  }
  target_tags = ["ssh"]
  source_tags = ["ssh"]
  }
